--- a/conf/application.conf
+++ b/conf/application.conf
@@ -18,10 +18,12 @@ application.secret="6wD9S3qD/:Y@AAO68uhX[yQm_nZ4qTaK@AsRis8a=RkUdAM=Fbs^Y<k/MpTA
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-# db.default.driver=org.h2.Driver
-# db.default.url="jdbc:h2:mem:play"
-# db.default.user=sa
-# db.default.password=
+db.default.driver=org.h2.Driver
+#db.default.url="jdbc:h2:mem:play"
+db.default.url="jdbc:h2:tmp/db/play_default"
+#db.default.url="jdbc:h2:tmp/db/play_default;TRACE_LEVEL_FILE=3;TRACE_LEVEL_SYSTEM_OUT=3"
+db.default.user=sa
+db.default.password=sa
 
 # Logger
 # ~~~~~
