migrated to play-2.0 final

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -7,6 +7,10 @@
 # If you deploy your application to several instances be sure to use the same key!
 application.secret="6wD9S3qD/:Y@AAO68uhX[yQm_nZ4qTaK@AsRis8a=RkUdAM=Fbs^Y<k/MpTAg?8Y"
 
+# The application languages
+# ~~~~~
+application.langs="en"
+
 # Global object class
 # ~~~~~
 # Define the Global object class for this application.
@@ -25,12 +29,17 @@ db.default.url="jdbc:h2:tmp/db/play_default"
 db.default.user=sa
 db.default.password=sa
 
+# Evolutions
+# ~~~~~
+# You can disable evolutions if needed
+# evolutionplugin=disabled
+
 # Logger
 # ~~~~~
 # You can also configure logback (http://logback.qos.ch/), by providing a logger.xml file in the conf directory .
 
 # Root logger:
-logger=ERROR
+logger.root=ERROR
 
 # Logger used by the framework:
 logger.play=INFO
